code/dotnet/GlobalFilings/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Global Filings client library for .NET

[![API Version](https://img.shields.io/badge/api-v0.0.0-blue)](https://developer.factset.com/api-catalog/global-filings-api)
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.GlobalFilings)](https://www.nuget.org/packages/FactSet.SDK.GlobalFilings)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The Filings API provides a comprehensive set of functionalities for searching and retrieving filing documents from various sources.

This API is designed to expose document search and document retrieval functionality. A document search will allow a request to query FactSet’s document databases based on certain search criteria specified in the request.

In addition, a document count request will provide information on the number of stories available for a particular security.

Helper endpoint will provide dynamic information on the parameters of a document request. .

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- SDK version: 0.1.1
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.GlobalFilings -v 0.1.1
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.GlobalFilings -Version 0.1.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.GlobalFilings.Api;
using FactSet.SDK.GlobalFilings.Client;
using FactSet.SDK.GlobalFilings.Model;

namespace Example
{
    public static class GetCountExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.GlobalFilings.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new FilingsAPIApi(config);
            var report = "count";  // string | retrives count of source.
            var sources = new List<string>(); // List<string> | Code for document source to include.This is a comma-separated list. Use the ```/helper``` endpoint to get the list of available sources.  
            var startDate = "\"0\"";  // string | Start Date. Format is YYYYMMDD or relative +/- days (0,-1,etc). (optional)  (default to "0")
            var endDate = "\"0\"";  // string | End Date. Format is YYYYMMDD or relative +/- days (0,-1,etc). (optional)  (default to "0")
            var ids = new List<string>(); // List<string> | Requested symbols or securities.  This is a comma-separated list with a maximum limit of 1000.  Each symbol can be a FactSet exchange symbol, CUSIP, or SEDOL. (optional) 

            try
            {
                // Returns the count of filings for specified source
                ResponseCount result = apiInstance.GetCount(report, sources, startDate, endDate, ids);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling FilingsAPIApi.GetCount: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/global-filings/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FilingsAPIApi* | [**GetCount**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/FilingsAPIApi.md#getcount) | **GET** /count | Returns the count of filings for specified source
*FilingsAPIApi* | [**GetFilings**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/FilingsAPIApi.md#getfilings) | **GET** /search | Returns the filings documents and related metadata within FactSet coverage.
*FilingsAPIApi* | [**GetHelper**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/FilingsAPIApi.md#gethelper) | **GET** /helper | Returns the static values for various parameters


## Documentation for Models

 - [Model.ErrorExample](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ErrorExample.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ErrorResponse.md)
 - [Model.InvestmentResearch](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/InvestmentResearch.md)
 - [Model.InvestmentResearchMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/InvestmentResearchMeta.md)
 - [Model.InvestmentResearchMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/InvestmentResearchMetaPagination.md)
 - [Model.InvestmentResearchObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/InvestmentResearchObject.md)
 - [Model.ResponseCount](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ResponseCount.md)
 - [Model.ResponseCountObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ResponseCountObject.md)
 - [Model.ResponseHelper](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ResponseHelper.md)
 - [Model.ResponseHelperObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ResponseHelperObject.md)
 - [Model.ResponseHelperObjectCategoriesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ResponseHelperObjectCategoriesObject.md)
 - [Model.ResponseHelperObjectFormtypesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ResponseHelperObjectFormtypesObject.md)
 - [Model.ResponseHelperObjectSourcesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ResponseHelperObjectSourcesObject.md)
 - [Model.ResponseHelperObjectTimeZonesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v0/docs/ResponseHelperObjectTimeZonesObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
